WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38838
RenderSVGImage::imageChanged should invalidate the SVG filter cache
https://bugs.webkit.org/show_bug.cgi?id=38838
Summary
RenderSVGImage::imageChanged should invalidate the SVG filter cache
Zoltan Herczeg
Reported
2010-05-10 03:13:58 PDT
Otherwise, the nullImage is cached, and no update after the resource arrived.
Attachments
patch
(11.40 KB, patch)
2010-05-10 03:19 PDT
,
Zoltan Herczeg
no flags
Details
Formatted Diff
Diff
patch
(11.40 KB, patch)
2010-05-10 03:32 PDT
,
Zoltan Herczeg
krit
: review-
krit
: commit-queue-
Details
Formatted Diff
Diff
patch + more description
(11.77 KB, patch)
2010-05-10 05:04 PDT
,
Zoltan Herczeg
krit
: review+
krit
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2010-05-10 03:19:31 PDT
Created
attachment 55535
[details]
patch
WebKit Review Bot
Comment 2
2010-05-10 03:25:05 PDT
Attachment 55535
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/rendering/RenderSVGImage.cpp:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zoltan Herczeg
Comment 3
2010-05-10 03:32:23 PDT
Created
attachment 55538
[details]
patch
Dirk Schulze
Comment 4
2010-05-10 04:16:56 PDT
Comment on
attachment 55538
[details]
patch Your patch looks good. But you should realy write more into the ChangeLog. What is the exactproblem, how and where did you solve this. And so on... r- mainly because of missing informations in the Changelog
Zoltan Herczeg
Comment 5
2010-05-10 05:04:00 PDT
Created
attachment 55544
[details]
patch + more description
Dirk Schulze
Comment 6
2010-05-10 05:18:01 PDT
Comment on
attachment 55544
[details]
patch + more description Great. Looks good now. Sadly we can't upload this patch as is, because of DRT changes. That means you need to update your DRT result for the test. I still r+ this patch because you have commiting rights and can update and upload the patch yourself. Otherwise post a new patch.
Zoltan Herczeg
Comment 7
2010-05-11 08:27:33 PDT
Landed in
r59147
.
http://trac.webkit.org/changeset/59147
Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug