WebCore: RenderSVGImage::imageChanged should invalidate the SVG filter cache https://bugs.webkit.org/show_bug.cgi?id=38838

Reviewed by Dirk Schulze.

Test: svg/filters/filteredImage.svg

* rendering/RenderSVGImage.cpp:
(WebCore::RenderSVGImage::imageChanged):

LayoutTests: Test case for SVG filter cache invalidation, after an image resource arrives.
https://bugs.webkit.org/show_bug.cgi?id=38838

Reviewed by Dirk Schulze.

* platform/gtk/Skipped:
* platform/mac/svg/filters/filteredImage-expected.checksum: Added.
* platform/mac/svg/filters/filteredImage-expected.png: Added.
* platform/mac/svg/filters/filteredImage-expected.txt: Added.
* platform/qt/svg/filters/filteredImage-expected.txt: Added.
* svg/filters/filteredImage.svg: Added.



Canonical link: https://commits.webkit.org/50386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59147 268f45cc-cd09-0410-ab3c-d52691b4dbfc